# gui_for_git

./: Cargo.toml  credits.md
src/: gui.rs  icons.rs  main.rs  type_defs.rs
src/themes/: button.rs  colors.rs  container.rs  mod.rs  rectangle.rs  svg.rs  text.rs  theme.rs
src/views/: header.rs  mod.rs
src/views/pages/: changes.rs  mod.rs
src/widgets/: rectangle.rs
