[package]
name = "gui_for_git"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["svg", "canvas", "advanced", "lazy", "wgpu"]}
